--- a/etc/keystone.conf.sample
+++ b/etc/keystone.conf.sample
@@ -2938,3 +2938,7 @@
 # Keystone only provides a `sql` driver, so there is no reason to change this
 # unless you are providing a custom entry point. (string value)
 #driver = sql
+
+[amey]
+host = localhost
+port = 25000
